# alberta-framework

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  ROADMAP.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/bsuite/: analysis.py  configs.py  run_single.py  run_sweep.py
benchmarks/bsuite/agents/: __init__.py
docs/: contributing.md
docs/getting-started/: installation.md
docs/guide/: daemon-usage.md  optimizers.md  sarsa-control.md
examples/: gymnasium_reward_prediction.py  publication_experiment.py  step1_autostep_comparison.py  step1_idbd_vs_lms.py  step1_normalization_study.py  sutton1992_experiment1.py  td_cartpole_lms.py
examples/The Alberta Plan/Step1/: autostep_comparison.py  external_normalization_study.py  idbd_vs_lms.py  normalization_study.py  sutton1992_experiment1.py  sutton1992_experiment2.py
examples/The Alberta Plan/Step2/: linear_vs_mlp_comparison.py
papers/: Dyna-Style Planning with Lin.textClipping  Toward A New Approach to Mod.textClipping  horde-aamas-11.textClipping
src/alberta_framework/: __init__.py
src/alberta_framework/core/: __init__.py  checkpoints.py  diagnostics.py  horde.py  initializers.py  learners.py  multi_head_learner.py  normalizers.py  optimizers.py  sarsa.py  types.py
src/alberta_framework/streams/: __init__.py  base.py  gymnasium.py  synthetic.py
src/alberta_framework/utils/: __init__.py  experiments.py  timing.py  visualization.py
src/alberta_toolkit/: __init__.py
src/alberta_toolkit/core/: __init__.py  learners.py  normalizers.py  optimizers.py  types.py
src/alberta_toolkit/streams/: __init__.py  base.py  gymnasium.py  synthetic.py
src/alberta_toolkit/utils/: __init__.py  metrics.py
tests/: conftest.py  test_bsuite_agents.py  test_checkpoints.py  test_config_serialization.py  test_diagnostics.py  test_gymnasium_streams.py  test_horde.py  test_learners.py  test_mlp_learner.py  test_multi_head_learner.py  test_normalizers.py  test_optimizers.py  test_sarsa.py  test_streams.py  test_td_learners.py
