[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alberta-framework"
version = "0.1.0"
description = "Implementation of the Alberta Plan for AI Research - continual learning with meta-learned step-sizes"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [
    { name = "Keith", email = "keith@example.com" }
]
keywords = ["machine-learning", "continual-learning", "meta-learning", "jax", "reinforcement-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]
gymnasium = [
    "gymnasium>=0.29.0",
]

[project.urls]
Homepage = "https://github.com/keith/alberta-framework"
Repository = "https://github.com/keith/alberta-framework"

[tool.hatch.build.targets.wheel]
packages = ["src/alberta_framework"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
