[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alberta-framework"
version = "0.1.0"
description = "Implementation of the Alberta Plan for AI Research - continual learning with meta-learned step-sizes"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [
    { name = "Keith", email = "keith@example.com" }
]
keywords = ["machine-learning", "continual-learning", "meta-learning", "jax", "reinforcement-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]
gymnasium = [
    "gymnasium>=0.29.0",
]
analysis = [
    "matplotlib>=3.8",
    "scipy>=1.11",
    "joblib>=1.3",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/keith/alberta-framework"
Repository = "https://github.com/keith/alberta-framework"

[tool.hatch.build.targets.wheel]
packages = ["src/alberta_framework"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
strict = true

[[tool.mypy.overrides]]
module = "gymnasium.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "joblib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
